@@ -25,7 +25,10 @@ import java.util.concurrent.TimeUnit;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import org.anjocaido.groupmanager.dataholder.worlds.WorldsHolder;
+import org.anjocaido.groupmanager.events.GMSystemEvent;
 import org.anjocaido.groupmanager.events.GMWorldListener;
+import org.anjocaido.groupmanager.events.GroupManagerEventHandler;
+import org.anjocaido.groupmanager.events.GMGroupEvent.Action;
 import org.anjocaido.groupmanager.utils.GMLoggerHandler;
 import org.anjocaido.groupmanager.utils.PermissionCheckResult;
 import org.anjocaido.groupmanager.utils.Tasks;
@@ -1492,7 +1495,9 @@ public class GroupManager extends JavaPlugin {
 				return true;
 
 			case manload:
-				// THIS CASE DONT NEED SENDER
+				/**
+				 * Attempt to reload a specific world
+				 */
 				if (args.length > 0) {
 					auxString = "";
 					for (int i = 0; i < args.length; i++) {
@@ -1502,51 +1507,34 @@ public class GroupManager extends JavaPlugin {
 						}
 					}
 
-					isLoaded = false; // Disable Bukkit Perms update
+					isLoaded = false; // Disable Bukkit Perms update and event triggers
 
 					globalGroups.load();
 					worldsHolder.loadWorld(auxString);
 					
-					sender.sendMessage("The request to world '" + auxString + "' was sent.");
+					sender.sendMessage("The request to reload world '" + auxString + "' was attempted.");
 
 					isLoaded = true;
 
 					BukkitPermissions.updateAllPlayers();
 
-					return true;
-				}
-				// VALIDANDO ESTADO DO SENDER
-				if (dataHolder == null || permissionHandler == null) {
-					if (!setDefaultWorldHandler(sender))
-						return true;
-				}
-				// WORKING
-				config.load();
-				globalGroups.load();
-				worldsHolder.mirrorSetUp();
-				
-				isLoaded = false;
-
-				if (args.length > 0) {
-					auxString = "";
-					for (int i = 0; i < args.length; i++) {
-						auxString += args[i];
-						if ((i + 1) < args.length) {
-							auxString += " ";
-						}
-					}
-					worldsHolder.loadWorld(auxString);
-					sender.sendMessage("The request to world '" + auxString + "' was sent.");
 				} else {
-					worldsHolder.reloadAll();
-					sender.sendMessage(ChatColor.YELLOW + " All worlds were reloaded.");
+				
+					/**
+					 * Reload all settings and data as no world was specified.
+					 */
+					onDisable();
+					onEnable();
 				}
-
-				isLoaded = true;
-
-				BukkitPermissions.updateAllPlayers();
+				
+				/**
+				 * Fire an event as none will have been triggered in the reload.
+				 */
+				if (GroupManager.isLoaded())
+		        	GroupManagerEventHandler.callEvent(GMSystemEvent.Action.RELOADED);
 
 				return true;
+				
 			case listgroups:
 				// VALIDANDO ESTADO DO SENDER
 				if (dataHolder == null || permissionHandler == null) {
